# tecnicas_avanzadas_llm

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
banco_occidente_scraper/: RESUMEN_SCRAPING.md  datos_banco_occidente.json  datos_banco_occidente_legible.json  datos_estructurados.json  scrapy.cfg
banco_occidente_scraper/banco_occidente_scraper/: items.py  middlewares.py  pipelines.py  settings.py
catalog/: banco_de_occidente.yml
config/: models.yaml
config/scrapy/: settings.py
data/processed/: company_context.txt  context_colgate.txt  context_palmolive.txt  context_youtube.txt
data/qa/: faq.json  prices.json  qa_colgate_palmolive.csv
data/raw/: company_data.json  productos_colgate.csv  productos_palmolive.csv  youtube_channel_videos.json
etl/extract/: colgate_productos.py  fetch_social_media.py  palmolive_productos.py
etl/transform/: preprocessing.py  price_processing.py
parsers/: branches.md  faq.md  fees.md  rates.md
rag_knowledge_system/: .env.example  Dockerfile
rag_knowledge_system/src/: __init__.py
schemas/: banco_de_occidente.md
scraping/extrac/: colgate_data.json  crawl_urls.py  fetch_all_content.py  prueba.py  urls_selected.json
scraping/limp/: clean_data.py  colgate_data_clean.json
scraping/segment/: chunk_data.py  colgate_chunks.json
src/api/: routes.py  schemas.py
src/config/: logger.py  prompts.py  settings.py  tools.py
src/controllers/: chatbot_controller.py
src/core/: prompts.py
src/langchain/: contexto.txt  ollama_test.py  ollama_test_old.py
(+48 files in other folders)
