[project]
name = "tecnicas-avanzadas-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain-google-genai>=3.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "selenium>=4.37.0",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
]
